# slint-bangumi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.toml  config.toml  index.html  package-lock.json  package.json  repo.xml  repomix-output.xml  tsconfig.json  vite.config.ts
data/: slint-bangumi.sqlite3
docs/: PROJECT_STATUS.md
electron/: asset-protocol.cjs  backend-ipc.cjs  main.cjs  player-control.cjs  preload.cjs  render-bridge.cjs
frontend/src/: App.tsx  DanmakuOverlay.tsx  MediaCard.tsx  MpvWebglSurface.tsx  NavRail.tsx  backend.ts  danmaku.worker.ts  data.ts  icons.tsx  index.css  ui.tsx  vite-env.d.ts
frontend/src/pages/: Detail.tsx  Discover.tsx  Downloads.tsx  Home.tsx  Library.tsx  Player.tsx  Profile.tsx  Resources.tsx  Settings.tsx
native/mpv-render-bridge/: renderer-daemon.cjs
native/mpv-render-bridge/src/: addon.cc
scripts/: build-native-render.cjs  diagnose-player.cjs  prepare-release-assets.cjs
src/: app.rs  backend_api.rs  backend_daemon.rs  config.rs  domain.rs  error.rs  main.rs  player_daemon.rs  repository.rs  service.rs  task.rs
src/metadata/: bangumi.rs  cache.rs  matcher.rs  mod.rs  provider.rs
src/repository/: schema.rs
src/service/: bangumi.rs  catalog.rs  watch_history.rs
src/ui/: bridge.rs
ui/: main.slint
