[package]
name = "nexplay"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
walkdir = "2"
